RESOLVED FIXED48843
Web Inspector: [Chromium] Profiling must survive navigation
https://bugs.webkit.org/show_bug.cgi?id=48843
Summary Web Inspector: [Chromium] Profiling must survive navigation
Mikhail Naganov
Reported 2010-11-02 09:35:41 PDT
From crbug/60998: What steps will reproduce the problem? 1. Navigate to www.google.com 2. Open inspector(Ctrl+Shift+I) and go to Profile tab 3. Start profiling 4. Reload the page 5. Stop profiling What is the expected output? Profile should be present What do you see instead? Profile is not visible ---- Also, it would be nice to resume profiling when navigation leads to a page from other domain.
Attachments
proposed patch (14.77 KB, patch)
2010-11-02 09:48 PDT, Mikhail Naganov
no flags
fix style and qt errors (14.85 KB, patch)
2010-11-03 04:29 PDT, Mikhail Naganov
no flags
profiles list in Inspector is now cleaned up on any reload, this simplifies code a lot (12.13 KB, patch)
2010-11-03 08:38 PDT, Mikhail Naganov
abarth: review+
abarth: commit-queue-
Mikhail Naganov
Comment 1 2010-11-02 09:48:22 PDT
Created attachment 72688 [details] proposed patch
WebKit Review Bot
Comment 2 2010-11-02 09:55:14 PDT
Attachment 72688 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebCore/inspector/InspectorProfilerAgent.cpp:207: More than one command on the same line in if [whitespace/parens] [4] WebCore/inspector/InspectorProfilerAgent.cpp:226: More than one command on the same line in if [whitespace/parens] [4] Total errors found: 2 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Early Warning System Bot
Comment 3 2010-11-02 10:54:29 PDT
Mikhail Naganov
Comment 4 2010-11-03 04:29:06 PDT
Created attachment 72811 [details] fix style and qt errors
Mikhail Naganov
Comment 5 2010-11-03 08:38:09 PDT
Created attachment 72826 [details] profiles list in Inspector is now cleaned up on any reload, this simplifies code a lot
Adam Barth
Comment 6 2010-11-04 15:43:45 PDT
Comment on attachment 72826 [details] profiles list in Inspector is now cleaned up on any reload, this simplifies code a lot View in context: https://bugs.webkit.org/attachment.cgi?id=72826&action=review Lack of tests => sadness > WebCore/inspector/InspectorController.cpp:677 > -void InspectorController::restoreProfiler() > +void InspectorController::restoreProfiler(bool reset) Consider using an enum rather than a bool here to make the call sites more readable.
Csaba Osztrogonác
Comment 7 2010-11-08 05:54:06 PST
http://trac.webkit.org/changeset/71511 broke Qt minimal build: ../../../WebCore/inspector/InspectorController.cpp:241: error: ‘startUserInitiatedProfiling’ was not declared in this scope Using of startUserInitiatedProfiling must be guarded by ENABLE(JAVASCRIPT_DEBUGGER) as its declaration. Could you fix it?
Mikhail Naganov
Comment 8 2010-11-08 06:03:46 PST
Manually committed as http://trac.webkit.org/changeset/71511 + r71513 2010-11-08 Mikhail Naganov <mnaganov@chromium.org> Reviewed by Adam Barth. Web Inspector [Chromium]: Make CPU profiling to survive navigation. https://bugs.webkit.org/show_bug.cgi?id=48843 * inspector/Inspector.idl: * inspector/InspectorController.cpp: (WebCore::InspectorController::restoreInspectorStateFromCookie): (WebCore::InspectorController::reuseFrontend): (WebCore::InspectorController::disconnectFrontend): (WebCore::InspectorController::populateScriptObjects): (WebCore::InspectorController::restoreProfiler): (WebCore::InspectorController::didCommitLoad): (WebCore::InspectorController::startUserInitiatedProfiling): (WebCore::InspectorController::stopUserInitiatedProfiling): * inspector/InspectorController.h: (WebCore::InspectorController::startProfiling): (WebCore::InspectorController::stopProfiling): * inspector/InspectorProfilerAgent.cpp: (WebCore::InspectorProfilerAgent::startUserInitiatedProfiling): (WebCore::InspectorProfilerAgent::stopUserInitiatedProfiling): * inspector/InspectorProfilerAgent.h: * inspector/InspectorState.cpp: (WebCore::InspectorState::InspectorState): * inspector/InspectorState.h: * inspector/front-end/ProfilesPanel.js: (WebInspector.ProfilesPanel.prototype.hasTemporaryProfile): (WebInspector.ProfilesPanel.prototype.hasProfile): * inspector/front-end/inspector.js: (WebInspector.setRecordingProfile):
Note You need to log in before you can comment on or make changes to this bug.