WebCore/inspector/InspectorController.cpp
@@ -237,6 +237,8 @@ void InspectorController::restoreInspectorStateFromCookie(const String& inspecto
     m_state->restoreFromInspectorCookie(inspectorStateCookie);
     if (m_state->getBoolean(InspectorState::timelineProfilerEnabled))
         startTimelineProfiler();
+    if (m_state->getBoolean(InspectorState::userInitiatedProfiling))
+        startUserInitiatedProfiling();
 }
 
 void InspectorController::inspect(Node* node)
@@ -508,7 +510,7 @@ void InspectorController::reuseFrontend()
 {
     connectFrontend();
     restoreDebugger();
-    restoreProfiler();
+    restoreProfiler(ProfilerRestoreResetAgent);
 }
 
 void InspectorController::show()
@@ -577,7 +579,7 @@ void InspectorController::disconnectFrontend()
 
 #if ENABLE(JAVASCRIPT_DEBUGGER)
     m_profilerAgent->setFrontend(0);
-    m_profilerAgent->stopUserInitiatedProfiling();
+    m_profilerAgent->stopUserInitiatedProfiling(true);
 #endif
 
     releaseFrontendLifetimeAgents();
@@ -656,7 +658,7 @@ void InspectorController::populateScriptObjects()
     m_pendingEvaluateTestCommands.clear();
 
     restoreDebugger();
-    restoreProfiler();
+    restoreProfiler(ProfilerRestoreNoAction);
 }
 
 void InspectorController::restoreDebugger()
@@ -672,13 +674,15 @@ void InspectorController::restoreDebugger()
 #endif
 }
 
-void InspectorController::restoreProfiler()
+void InspectorController::restoreProfiler(ProfilerRestoreAction action)
 {
     ASSERT(m_frontend);
 #if ENABLE(JAVASCRIPT_DEBUGGER)
     m_profilerAgent->setFrontend(m_frontend.get());
     if (!ScriptProfiler::isProfilerAlwaysEnabled() && m_state->getBoolean(InspectorState::profilerAlwaysEnabled))
         enableProfiler();
+    if (action == ProfilerRestoreResetAgent)
+        m_profilerAgent->resetState();
 #endif
 }
 
@@ -726,6 +730,7 @@ void InspectorController::didCommitLoad(DocumentLoader* loader)
 #endif
 
 #if ENABLE(JAVASCRIPT_DEBUGGER) && USE(JSC)
+        m_profilerAgent->stopUserInitiatedProfiling(true);
         m_profilerAgent->resetState();
 #endif
 
@@ -1298,6 +1303,7 @@ void InspectorController::startUserInitiatedProfiling()
     if (!enabled())
         return;
     m_profilerAgent->startUserInitiatedProfiling();
+    m_state->setBoolean(InspectorState::userInitiatedProfiling, true);
 }
 
 void InspectorController::stopUserInitiatedProfiling()
@@ -1305,6 +1311,7 @@ void InspectorController::stopUserInitiatedProfiling()
     if (!enabled())
         return;
     m_profilerAgent->stopUserInitiatedProfiling();
+    m_state->setBoolean(InspectorState::userInitiatedProfiling, false);
 }
 
 bool InspectorController::profilerEnabled() const
